<resources>
    <string name="app_name">Curry Pot</string>
    <string name="action_settings">Settings</string>
    <string name="cart_add_button">Add</string>
    <string name="cart_remove_button">REMOVE</string>
    <string name="shopping_cart_title">Shopping Cart</string>
    <string name="purchases_title">Purchases</string>
    <string name="menu_profile">My profile</string>
    <string name="shopping_cart_empty">Your cart is empty</string>
    <string name="shopping_cart_checkout">Checkout</string>
    <string name="shopping_cart_total">Total Credits: %1$d</string>
    <string name="shopping_cart_quantity_label">QTY</string>
    <string name="shopping_cart_remove_description">Remove from cart</string>
    <string name="chevron_left">\u2039</string>
    <string name="chevron_right">\u203A</string>
    <string name="content_authority">com.example.harishmurari.curries</string>
    <string name="curry_price">Price: %1$d</string>
    <string name="shopping_cart_item_added">Added to shopping cart</string>
    <string name="menu_sign_off">SignOff</string>
    <plurals name="number_of_items">
        <!--
             As a developer, you should always supply "one" and "other"
             strings. Your translators will know which strings are actually
             needed for their language. Always include %d in "one" because
             translators will need to use %d for languages where "one"
             doesn't mean 1.
          -->
        <item quantity="one">%d rupees</item>
        <item quantity="other">%d rupees</item>
    </plurals>

    <string-array name="quantity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>
