<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.harishmurari.curries.ui.CartActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_app_bar_height"
        android:theme="@style/AppTheme.AppBarOverlay">


        <!--<android.support.v7.widget.Toolbar-->
            <!--android:id="@+id/cart_toolbar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="?attr/actionBarSize"-->
            <!--android:background="?attr/colorPrimary"-->
            <!--app:layout_collapseMode="pin"-->
            <!--app:popupTheme="@style/AppTheme.PopupOverlay" />-->

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:id="@+id/bottom_bar_checkout"
            android:layout_width="match_parent"
            android:layout_height="?attr/listPreferredItemHeightSmall"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimaryDark"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            >
            <TextView
                android:id="@+id/text_view_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:text="@string/shopping_cart_total"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="?android:attr/colorForegroundInverse" />

            <Button
                android:id="@+id/button_cart_checkout"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:text="@string/shopping_cart_checkout" />

        </FrameLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/cart_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/bottom_bar_checkout" />

        <TextView
            android:id="@+id/text_view_empty_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/shopping_cart_empty" />


    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>